Choose server from full list.

--- a/options/options.html
+++ b/options/options.html
@@ -4,15 +4,7 @@
 <body>
 
 Server:
-<select id="server">
-  <option value="alpha.astroempires.com">Alpha</option>
-  <option value="lyra.astroempires.com">Lrya</option>
-  <option value="epsilon.astroempires.com">Epsilon</option>
-  <option value="nova.astroempires.com">Nova</option>
-  <option value="mira.astroempires.com">Mira</option>
-  <option value="juno.astroempires.com">Juno</option>
-  <option value="omega.astroempires.com">Omega</option>
-</select>
+<select id="server" style="text-transform: capitalize;"></select>
 
 Email:
 <input id="email" />
